--- a/Concept Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.json
+++ b/Concept Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.760.59/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.762.46/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -50,6 +50,11 @@
       "name": "Fonts/Fonts.css",
       "description": "",
       "type": "Stylesheet"
+    },
+    {
+      "name": "CodeBehind/TcHmiBaSettings.js",
+      "description": "",
+      "type": "JavaScript"
     }
   ],
   "userControls": [
