Pipeline: Add Changelogs
Related Work item: #208316

--- a/Pipelines/TF8040Samples.yml
+++ b/Pipelines/TF8040Samples.yml
@@ -39,6 +39,7 @@ stages:
         - MD_SMALL
     steps:
 
+    - template: InitBaBT.yml@BaBuildTemplates
     - template: SetPipelineName.yml@BaBuildTemplates
       parameters:
         name: $(Version.MajorMinorPatchPreReleaseNumber)
@@ -145,3 +146,8 @@ stages:
       parameters:
         GitTag: TF8040_Samples/$(Version.MajorMinorPatchPreReleaseNumber)
         BranchName: $(branchName)
+
+    - template: CreateChangelog.yml@BaBuildTemplates
+      parameters:
+        WikiPage: 'Changelogs/Samples'
+        WikipageName: '$(Version.MajorMinorPatchPreReleaseNumber)_BA'        
