Concept Samples: Update to TF8040 v5.12.0.0

--- a/Concepts/HMI/HMI/Server/BaSite/BaSite.Config.default.json
+++ b/Concepts/HMI/HMI/Server/BaSite/BaSite.Config.default.json
@@ -4,6 +4,10 @@
         "EVENTHISTORYTHRESHOLD": 4000
     },
     "INTERVAL": 2000,
+    "MEMORY": {
+        "Loginterval": 5,
+        "Threshold": 80
+    },
     "RUNTIMES": {
         "IFP01": {
             "ENABLED": true,
