--- a/Concepts/HMI/HMI/Server/BaSite/BaSite.Config.remote.json
+++ b/Concepts/HMI/HMI/Server/BaSite/BaSite.Config.remote.json
@@ -1,14 +1,36 @@
 {
-    "EVENTSETTINGS": {
-        "EVENTHISTORYLIMIT": 40000,
-        "EVENTHISTORYTHRESHOLD": 4000
-    },
-    "INTERVAL": 2000,
-    "RUNTIMES": {
-        "IFP01": {
-            "ENABLED": false,
-            "NETID": "127.0.0.1.1.1",
-            "PORT": 851
-        }
+  "EVENTSETTINGS": {
+    "EVENTHISTORYLIMIT": 40000,
+    "EVENTHISTORYTHRESHOLD": 4000
+  },
+  "INTERVAL": 2000,
+  "MEMORY": {
+    "Loginterval": 5,
+    "Threshold": 80
+  },
+  "RUNTIMES": {
+    "IFP01": {
+      "ENABLED": true,
+      "NETID": "127.0.0.1.1.1",
+      "PORT": 851
     }
+  },
+  "USERLEVEL": {
+    "LEVEL_ADVANCED": [
+      "Advanced"
+    ],
+    "LEVEL_BASIC": [
+      "Basic"
+    ],
+    "LEVEL_EXPERT": [
+      "Expert"
+    ],
+    "LEVEL_GUEST": [
+      "Guest"
+    ],
+    "LEVEL_INTERNAL": [
+      "Internal",
+      "__SystemAdministrators"
+    ]
+  }
 }
