Template Samples: Update to TF8040 v5.12.0.0

--- a/Templates/HMI/HMI/Properties/tchmiconfig.json
+++ b/Templates/HMI/HMI/Properties/tchmiconfig.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.762.46/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.762.57/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -59,25 +59,33 @@
   ],
   "userControls": [
     {
-      "url": "Navigation/HeaderMenu.usercontrol"
-    },
-    {
       "url": "Samples/Layouts/AHU_PipeLayout.usercontrol"
     },
     {
+      "url": "Samples/Plants/PreHeater.usercontrol"
+    },
+    {
+      "url": "Samples/Plants/HeatingCircuit.usercontrol"
+    },
+    {
+      "url": "Samples/Plants/ErcRotation.usercontrol"
+    },
+    {
+      "url": "Samples/Plants/ErcPlate.usercontrol"
+    },
+    {
+      "url": "Samples/Plants/Cooler.usercontrol"
+    },
+    {
       "url": "Samples/Plants/AHU.usercontrol"
+    },
+    {
+      "url": "Navigation/HeaderMenu.usercontrol"
     }
   ],
   "content": [
     {
       "url": "Content/Plants/Samples.MAIN.ROM.RoomSample.content",
-      "preload": false,
-      "keepAlive": false,
-      "loadSync": false,
-      "preloadBindings": false
-    },
-    {
-      "url": "Content/Pages/EventList.content",
       "preload": false,
       "keepAlive": false,
       "loadSync": false,
@@ -99,6 +107,13 @@
     },
     {
       "url": "Content/Pages/StartPage.content",
+      "preload": false,
+      "keepAlive": false,
+      "loadSync": false,
+      "preloadBindings": false
+    },
+    {
+      "url": "Content/Pages/EventList.content",
       "preload": false,
       "keepAlive": false,
       "loadSync": false,
