--- a/Templates/HMI/HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Templates/HMI/HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -9494,7 +9494,7 @@
         "BaSite": {
             "ENABLED": true,
             "NAME": "BaSite",
-            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.BaSite.2.11.1\\runtimes\\any\\native\\",
+            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.BaSite.2.13.4\\runtimes\\any\\native\\",
             "REQUIRED": false,
             "STARTUPTYPE": 1
         },
@@ -10887,6 +10887,57 @@
             "SCHEMA": {
                 "function": true,
                 "properties": {
+                    "MEMORY": {
+                        "description": "DESC_MEMORY",
+                        "properties": {
+                            "freeMem": {
+                                "propertyOrder": 3,
+                                "readOnly": true,
+                                "type": "string"
+                            },
+                            "isOverLoaded": {
+                                "description": "DESC_isOverLoaded",
+                                "propertyOrder": 4,
+                                "readOnly": true,
+                                "type": "boolean"
+                            },
+                            "loginterval": {
+                                "description": "DESC_loginterval",
+                                "hidden": true,
+                                "minimum": 1.0,
+                                "propertyOrder": 6,
+                                "readOnly": true,
+                                "type": "integer"
+                            },
+                            "percentageAllocated": {
+                                "propertyOrder": 1,
+                                "readOnly": true,
+                                "type": "number"
+                            },
+                            "threshold": {
+                                "description": "DESC_threshold",
+                                "hidden": true,
+                                "maximum": 100.0,
+                                "minimum": 0.0,
+                                "propertyOrder": 5,
+                                "readOnly": true,
+                                "type": "integer"
+                            },
+                            "totalMem": {
+                                "propertyOrder": 2,
+                                "readOnly": true,
+                                "type": "string"
+                            }
+                        },
+                        "propertyOrder": 6,
+                        "required": [
+                            "percentageAllocated",
+                            "totalMem",
+                            "freeMem",
+                            "isOverLoaded"
+                        ],
+                        "type": "object"
+                    },
                     "adsDllVersion": {
                         "propertyOrder": 3,
                         "readOnly": true,
@@ -14218,15 +14269,15 @@
     "USERSELECTTYPE": 0,
     "VIDEOSEGMENTSIZE": 1048576,
     "VIRTUALDIRECTORIES": {
-        "/": "..\\..\\TF8040 Template Samples HMI\\",
-        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.2.11.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.2.11.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.2.11.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.762.46\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.762.46\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.760.59\\runtimes\\native1.12-tchmi",
-        "/bin": "..\\..\\TF8040 Template Samples HMI\\bin\\",
-        "/bin/framework": "..\\..\\TF8040 Template Samples HMI\\bin\\framework",
-        "/framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.762.46\\runtimes\\native1.12-tchmi"
+        "/": "..\\..\\HMI\\",
+        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.2.13.4\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.2.13.4\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.2.13.4\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.762.56\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.762.56\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.762.56\\runtimes\\native1.12-tchmi",
+        "/bin": "..\\..\\HMI\\bin\\",
+        "/bin/framework": "..\\..\\HMI\\bin\\framework",
+        "/framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Framework.12.762.57\\runtimes\\native1.12-tchmi"
     }
 }
