--- a/Templates/HMI/HMI/Server/BaSite/BaSite.Config.remote.json
+++ b/Templates/HMI/HMI/Server/BaSite/BaSite.Config.remote.json
@@ -4,11 +4,33 @@
         "EVENTHISTORYTHRESHOLD": 4000
     },
     "INTERVAL": 2000,
+    "MEMORY": {
+        "Loginterval": 5,
+        "Threshold": 80
+    },
     "RUNTIMES": {
         "IFP01": {
-            "ENABLED": false,
+            "ENABLED": true,
             "NETID": "127.0.0.1.1.1",
             "PORT": 851
         }
+    },
+    "USERLEVEL": {
+        "LEVEL_ADVANCED": [
+            "Advanced"
+        ],
+        "LEVEL_BASIC": [
+            "Basic"
+        ],
+        "LEVEL_EXPERT": [
+            "Expert"
+        ],
+        "LEVEL_GUEST": [
+            "Guest"
+        ],
+        "LEVEL_INTERNAL": [
+            "Internal",
+            "__SystemAdministrators"
+        ]
     }
 }
