--- a/Concepts/HMI/HMI/Properties/tchmiconfig.json
+++ b/Concepts/HMI/HMI/Properties/tchmiconfig.json
@@ -1,14 +1,19 @@
 {
-  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.762.57/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
-  "basePath": "./framework",
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.14.3.393/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "basePath": "./Beckhoff.TwinCAT.HMI.Framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
   "loginPage": "",
+  "splash": {
+    "versionSource": "Framework"
+  },
+  "projectVersion": "2.1.2.0",
   "tcHmiServer": {
     "websocketIntervalTime": 500,
     "websocketTimeout": 20000,
     "websocketSystemTimeout": 60000,
-    "websocketSubscriptionMode": "Change"
+    "websocketSubscriptionMode": null,
+    "disableOptionalSystemSubscriptions": false
   },
   "activeTheme": "Base",
   "themes": {
@@ -62,6 +67,7 @@
       "url": "Navigation/HeaderMenu.usercontrol"
     }
   ],
+  "controls": [],
   "content": [
     {
       "url": "Content/Pages/EventList.content",
@@ -206,8 +212,11 @@
           "Base-Dark": "Themes/Base-Dark/Images/Temperature.svg"
         }
       }
-    }
+    },
+    "timer": {},
+    "package": {}
   },
+  "intervals": {},
   "trigger": [
     {
       "event": "onInitialized",
@@ -267,36 +276,58 @@
     }
   },
   "binding": {
-    "symbolError": "Ignore"
+    "symbolError": "Ignore",
+    "symbolWriteError": "ReadBack"
   },
   "packages": [
     {
       "name": "Beckhoff.TwinCAT.HMI.BA.Controls",
-      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Controls"
+      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Controls",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.BA.Framework",
-      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Framework"
+      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Framework",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.BA.Icons",
-      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Icons"
+      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Icons",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.Controls",
-      "basePath": "/Beckhoff.TwinCAT.HMI.Controls"
+      "basePath": "/Beckhoff.TwinCAT.HMI.Controls",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.Framework",
-      "basePath": "/framework"
+      "basePath": "/Beckhoff.TwinCAT.HMI.Framework",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.Functions",
-      "basePath": "/Beckhoff.TwinCAT.HMI.Functions"
+      "basePath": "/Beckhoff.TwinCAT.HMI.Functions",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.ResponsiveNavigation",
-      "basePath": "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation"
+      "basePath": "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation",
+      "symbols": {
+        "package": {}
+      }
     }
   ],
   "keyboardLayouts": [
@@ -309,6 +340,7 @@
   ],
   "systemKeyboard": {
     "providerName": "",
+    "autoOpen": false,
     "projectKeyboardMapping": {
       "de-DE": {
         "text": "",
