--- a/Concepts/HMI/HMI/packages.config
+++ b/Concepts/HMI/HMI/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Beckhoff.TwinCAT.HMI.BA.BaSite" version="2.13.4" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="2.13.4" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="2.13.4" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="2.13.4" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Controls" version="12.762.56" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Framework" version="12.762.57" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Functions" version="12.762.56" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.ResponsiveNavigation" version="12.762.56" targetFramework="native1.12-tchmi" />
-  <package id="Microsoft.TypeScript.MSBuild" version="4.9.5" developmentDependency="true" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.BaSite" version="2.14.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="2.14.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="2.14.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="2.14.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Controls" version="14.4.23" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Framework" version="14.3.393" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Functions" version="14.3.342" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.ResponsiveNavigation" version="14.3.344" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Server.Engineering" version="22.0.7733" targetFramework="native1.12-tchmi" />
+  <package id="Microsoft.TypeScript.MSBuild" version="5.9.3" developmentDependency="true" />
 </packages>
