--- a/Concepts/HMI/HMI/tsconfig.json
+++ b/Concepts/HMI/HMI/tsconfig.json
@@ -3,20 +3,18 @@
   "compileOnSave": true,
   "compilerOptions": {
     "module": "none",
-    "target": "es6",
+    "target": "ES2022",
     "skipLibCheck": true,
     "lib": [
-      "dom",
-      "scripthost",
-      "es6",
-      "es2017.intl"
+      "DOM",
+      "DOM.Iterable",
+      "ES2023"
     ],
     "types": [],
     "declaration": true,
     "sourceMap": true,
     "noEmitOnError": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitThis": true,
     "strictNullChecks": true,
     "noImplicitReturns": true,
@@ -28,6 +26,6 @@
     "bin/"
   ],
   "include": [
-    "../Packages/Beckhoff.TwinCAT.HMI.Framework.12.762.57/runtimes/native1.12-tchmi/TcHmi.d.ts"
+    "../Packages/Beckhoff.TwinCAT.HMI.Framework.14.3.393/runtimes/native1.12-tchmi/TcHmi.d.ts"
   ]
 }
