--- a/Templates/HMI/HMI/Properties/tchmiconfig.json
+++ b/Templates/HMI/HMI/Properties/tchmiconfig.json
@@ -1,14 +1,19 @@
 {
-  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.762.57/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
-  "basePath": "./framework",
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.14.3.393/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "basePath": "./Beckhoff.TwinCAT.HMI.Framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
   "loginPage": "",
+  "splash": {
+    "versionSource": "Framework"
+  },
+  "projectVersion": "2.2.0.0",
   "tcHmiServer": {
     "websocketIntervalTime": 500,
     "websocketTimeout": 20000,
     "websocketSystemTimeout": 60000,
-    "websocketSubscriptionMode": "Change"
+    "websocketSubscriptionMode": null,
+    "disableOptionalSystemSubscriptions": false
   },
   "activeTheme": "Base",
   "themes": {
@@ -59,33 +64,34 @@
   ],
   "userControls": [
     {
+      "url": "Navigation/HeaderMenu.usercontrol"
+    },
+    {
       "url": "Samples/Layouts/AHU_PipeLayout.usercontrol"
-    },
-    {
-      "url": "Samples/Plants/PreHeater.usercontrol"
-    },
-    {
-      "url": "Samples/Plants/HeatingCircuit.usercontrol"
-    },
-    {
-      "url": "Samples/Plants/ErcRotation.usercontrol"
-    },
-    {
-      "url": "Samples/Plants/ErcPlate.usercontrol"
-    },
-    {
-      "url": "Samples/Plants/Cooler.usercontrol"
     },
     {
       "url": "Samples/Plants/AHU.usercontrol"
     },
     {
-      "url": "Navigation/HeaderMenu.usercontrol"
+      "url": "Samples/Plants/Cooler.usercontrol"
+    },
+    {
+      "url": "Samples/Plants/ErcPlate.usercontrol"
+    },
+    {
+      "url": "Samples/Plants/ErcRotation.usercontrol"
+    },
+    {
+      "url": "Samples/Plants/HeatingCircuit.usercontrol"
+    },
+    {
+      "url": "Samples/Plants/PreHeater.usercontrol"
     }
   ],
+  "controls": [],
   "content": [
     {
-      "url": "Content/Plants/Samples.MAIN.ROM.RoomSample.content",
+      "url": "Content/Pages/EventList.content",
       "preload": false,
       "keepAlive": false,
       "loadSync": false,
@@ -113,7 +119,7 @@
       "preloadBindings": false
     },
     {
-      "url": "Content/Pages/EventList.content",
+      "url": "Content/Plants/Samples.MAIN.ACS.AHU01.content",
       "preload": false,
       "keepAlive": false,
       "loadSync": false,
@@ -127,7 +133,7 @@
       "preloadBindings": false
     },
     {
-      "url": "Content/Plants/Samples.MAIN.ACS.AHU01.content",
+      "url": "Content/Plants/Samples.MAIN.ROM.RoomSample.content",
       "preload": false,
       "keepAlive": false,
       "loadSync": false,
@@ -168,8 +174,11 @@
           "Base-Dark": "Themes/Base-Dark/Images/Temperature.svg"
         }
       }
-    }
+    },
+    "timer": {},
+    "package": {}
   },
+  "intervals": {},
   "trigger": [
     {
       "event": "onInitialized",
@@ -201,36 +210,58 @@
     }
   },
   "binding": {
-    "symbolError": "Ignore"
+    "symbolError": "Ignore",
+    "symbolWriteError": "ReadBack"
   },
   "packages": [
     {
       "name": "Beckhoff.TwinCAT.HMI.BA.Controls",
-      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Controls"
+      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Controls",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.BA.Framework",
-      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Framework"
+      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Framework",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.BA.Icons",
-      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Icons"
+      "basePath": "/Beckhoff.TwinCAT.HMI.BA.Icons",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.Controls",
-      "basePath": "/Beckhoff.TwinCAT.HMI.Controls"
+      "basePath": "/Beckhoff.TwinCAT.HMI.Controls",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.Framework",
-      "basePath": "/framework"
+      "basePath": "/Beckhoff.TwinCAT.HMI.Framework",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.Functions",
-      "basePath": "/Beckhoff.TwinCAT.HMI.Functions"
+      "basePath": "/Beckhoff.TwinCAT.HMI.Functions",
+      "symbols": {
+        "package": {}
+      }
     },
     {
       "name": "Beckhoff.TwinCAT.HMI.ResponsiveNavigation",
-      "basePath": "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation"
+      "basePath": "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation",
+      "symbols": {
+        "package": {}
+      }
     }
   ],
   "keyboardLayouts": [
@@ -243,6 +274,7 @@
   ],
   "systemKeyboard": {
     "providerName": "",
+    "autoOpen": false,
     "projectKeyboardMapping": {
       "de-DE": {
         "text": "",
