--- a/Templates/HMI/HMI/Server/ADS/ADS.Config.default.json
+++ b/Templates/HMI/HMI/Server/ADS/ADS.Config.default.json
@@ -13,16 +13,7 @@
     ],
     "NEW_HANDLES_PER_SUM_REQUEST_LIMIT": 100,
     "RESPONSE_SIZE_LIMIT": 2097152,
-    "RUNTIMES": {
-        "IFP01": {
-            "ENABLED": true,
-            "NETID": "127.0.0.1.1.1",
-            "PORT": 851,
-            "READ_ONLY": false,
-            "SYMBOLS": {},
-            "USE_WHITELISTING": false
-        }
-    },
+    "RUNTIMES": {},
     "RUNTIME_STATE_CHECK_INTERVAL": "PT2S",
     "RUNTIME_STATE_CHECK_TIMEOUT": "PT5S",
     "SUM_REQUEST_LIMIT": 500,
