--- a/Templates/HMI/HMI/Server/TcHmiUserManagement/TcHmiUserManagement.Config.default.json
+++ b/Templates/HMI/HMI/Server/TcHmiUserManagement/TcHmiUserManagement.Config.default.json
@@ -1,52 +1,76 @@
 {
+    "EXCLUDE_SYSTEM_ADMINISTRATOR_FROM_LOCKOUT": false,
+    "MAX_INVALID_LOGIN_ATTEMPTS": 0,
+    "PASSWORD_BLACKLIST": "",
+    "PASSWORD_ENABLE_AGING": false,
+    "PASSWORD_FORCE_COMPLEX": 0,
+    "PASSWORD_HISTORY_SIZE": 0,
+    "PASSWORD_MAXIMUM_AGE": "P90D",
+    "PASSWORD_MINIMUM_LENGTH": 1,
     "USERS": {
         "Advanced User": {
             "ALGORITHM": 1,
             "ENABLED": true,
             "PASSWORD": "",
-            "SALT": ""
+            "PASSWORD_HISTORY": [],
+            "SALT": "",
+            "TWO_FACTOR_AUTHENTICATION_ENABLED": false
         },
         "Basic User": {
             "ALGORITHM": 1,
             "ENABLED": true,
             "PASSWORD": "",
-            "SALT": ""
+            "PASSWORD_HISTORY": [],
+            "SALT": "",
+            "TWO_FACTOR_AUTHENTICATION_ENABLED": false
         },
         "Expert User": {
             "ALGORITHM": 1,
             "ENABLED": true,
             "PASSWORD": "",
-            "SALT": ""
+            "PASSWORD_HISTORY": [],
+            "SALT": "",
+            "TWO_FACTOR_AUTHENTICATION_ENABLED": false
         },
         "Guest User": {
             "ALGORITHM": 1,
             "ENABLED": true,
             "PASSWORD": "",
-            "SALT": ""
+            "PASSWORD_HISTORY": [],
+            "SALT": "",
+            "TWO_FACTOR_AUTHENTICATION_ENABLED": false
         },
         "Internal User": {
             "ALGORITHM": 1,
             "ENABLED": true,
             "PASSWORD": "",
-            "SALT": ""
+            "PASSWORD_HISTORY": [],
+            "SALT": "",
+            "TWO_FACTOR_AUTHENTICATION_ENABLED": false
         },
         "__SystemAdministrator": {
             "ALGORITHM": 0,
             "ENABLED": false,
             "PASSWORD": "",
-            "SALT": ""
+            "PASSWORD_HISTORY": [],
+            "SALT": "",
+            "TWO_FACTOR_AUTHENTICATION_ENABLED": false
         },
         "__SystemGuest": {
             "ALGORITHM": 0,
             "ENABLED": true,
             "PASSWORD": "",
-            "SALT": ""
+            "PASSWORD_HISTORY": [],
+            "SALT": "",
+            "TWO_FACTOR_AUTHENTICATION_ENABLED": false
         },
         "__SystemUser": {
             "ALGORITHM": 0,
             "ENABLED": true,
             "PASSWORD": "",
-            "SALT": ""
+            "PASSWORD_HISTORY": [],
+            "SALT": "",
+            "TWO_FACTOR_AUTHENTICATION_ENABLED": false
         }
     }
 }
