--- a/Templates/HMI/HMI/packages.config
+++ b/Templates/HMI/HMI/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Beckhoff.TwinCAT.HMI.BA.BaSite" version="2.13.4" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="2.13.4" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="2.13.4" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="2.13.4" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Controls" version="12.762.56" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Framework" version="12.762.57" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Functions" version="12.762.56" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.ResponsiveNavigation" version="12.762.56" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.BaSite" version="2.14.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="2.14.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="2.14.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="2.14.2" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Controls" version="14.4.23" />
+  <package id="Beckhoff.TwinCAT.HMI.Framework" version="14.3.393" />
+  <package id="Beckhoff.TwinCAT.HMI.Functions" version="14.3.342" />
+  <package id="Beckhoff.TwinCAT.HMI.ResponsiveNavigation" version="14.3.344" />
+  <package id="Beckhoff.TwinCAT.HMI.Server.Engineering" version="22.0.7733" />
+  <package id="Microsoft.TypeScript.MSBuild" version="5.9.3" targetFramework="native1.12-tchmi" developmentDependency="true" />
 </packages>
